@@ -1,4 +1,9 @@
-2003-01-08  Jordi Mallach  <jordi@sindominio.net>
+2003-01-09  Jordi Mallach  <jordi@sindominio.net>
+
+	* src/systray.c (systray_menu): Add mnemonics for menu items, change
+	"Exit" to "Quit". Added separator.
+
+2003-01-09  Jordi Mallach  <jordi@sindominio.net>
 
 	* src/map.c (path_type_dialog): Fix compile warning.
 
